--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,15 +1,15 @@
-name: TestAction
+name: Testing
 on: push
 
 jobs:
-    test_project:
-        runs-on: ubuntu-lastest
-        steps:
-         - uses: actions/checkout@v2
-         - name: Run Django unit tests
-            run: |
-                pip3 install --user -r requirements.txt
-                python3 REG/manage.py makemigrations
-                python3 REG/manage.py migrate
-                coverage run --source='.' REG/manage.py test
-                coverage report
+  test_project:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run Django unit tests
+        run: |
+          pip3 install --user -r requirements.txt
+          python3 REG/manage.py makemigrations
+          python3 REG/manage.py migrate
+          coverage run --source='.' REG/manage.py test
+          coverage report
