--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,5 +11,5 @@ jobs:
           pip3 install --user -r requirements.txt
           python3 manage.py makemigrations
           python3 manage.py migrate
-          coverage run --source='.' manage.py unit_test
+          coverage run --source='.' manage.py test unit_test
           coverage report
